@@ -33,8 +33,8 @@ class source:
         self.priority = 1
         self.language = ['en']
         self.domains = ['dizigold.net', 'dizigold1.com']
-        self.base_link = 'http://www.dizigold1.com'
-        self.player_link = 'http://player.dizigold1.com/?id=%s&s=1&dil=%s'
+        self.base_link = 'http://www.dizigold2.com'
+        self.player_link = 'http://player.dizigold2.com/?id=%s&s=1&dil=%s'
 
 
     def tvshow(self, imdb, tvdb, tvshowtitle, localtvshowtitle, aliases, year):
@@ -88,7 +88,7 @@ class source:
             id = re.compile('var\s*view_id\s*=\s*"(\d*)"').findall(result)[0]
 
 
-            for dil in ['tr', 'or']:
+            for dil in ['tr', 'or', 'en']:
                 query = self.player_link % (id, dil)
 
                 result = client.request(query, referer=base_url)
