@@ -1,3 +1,8 @@
+[B]1.1.7[/B]
+- Updated dizigold urls
+- Fixed streamlord
+- Updated and fixed seriesonline
+
 [B]1.1.6[/B]
 - Added alluc provider (thanks to weekendsource)
 
